<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5CACEE">


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_ly_layout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:id="@+id/nowstate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin">

                    <LinearLayout
                        style="@style/Widget.CardContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:text="@string/uploadTitle"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                        <EditText
                            android:id="@+id/EditTitle"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:background="@null"
                            android:hint="@string/inputTitle"
                            android:inputType="text"
                            android:paddingLeft="2dp"
                            android:textSize="15sp" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/pay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/card_margin"
                    android:layout_marginRight="@dimen/card_margin"
                    android:layout_marginBottom="@dimen/card_margin">

                    <LinearLayout
                        style="@style/Widget.CardContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:text="@string/uploadName"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                        <EditText
                            android:id="@+id/EditName"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:background="@null"
                            android:hint="@string/inputName"
                            android:inputType="text"
                            android:paddingLeft="2dp"
                            android:textSize="15sp" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/remove"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/card_margin"
                    android:layout_marginRight="@dimen/card_margin"
                    android:layout_marginBottom="@dimen/card_margin">

                    <LinearLayout
                        style="@style/Widget.CardContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:text="@string/uploadContent"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                        <EditText
                            android:id="@+id/EditContect"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@null"
                            android:hint="@string/inputContent"
                            android:inputType="text"
                            android:paddingLeft="2dp"
                            android:textSize="15sp" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/card_margin"
                    android:layout_marginRight="@dimen/card_margin"
                    android:layout_marginBottom="@dimen/card_margin">

                    <LinearLayout
                        style="@style/Widget.CardContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:text="@string/uploadPic"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                        <ImageView
                            android:id="@+id/pic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal" />

                        <Button
                            android:id="@+id/EditPic"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:hint="@string/inputPic"
                            android:textSize="15sp" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/card_margin"
                    android:layout_marginRight="@dimen/card_margin"
                    android:layout_marginBottom="@dimen/card_margin">

                    <LinearLayout
                        style="@style/Widget.CardContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="100dp"
                            android:layout_height="wrap_content">
                            <Button
                                android:id="@+id/input"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/inputInf" />
                        </LinearLayout>
                            <LinearLayout
                                android:layout_width="100dp"
                                android:layout_height="wrap_content">
                                <Button
                                    android:id="@+id/returnActivity"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/returnActivity" />
                            </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>